--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<h1>Fake News AI Detector</h1>
+<h1 class="bg-yellow-900">Fake News AI Detector</h1>
 <form>
-	<input type="text" placeholder="Enter text here" class="bg-yellow-900">
+	<input type="text" placeholder="Enter text here" class="">
 	<button type="submit" class="text box">Submit</button>
 </form>
